force-app/main/default/objects/Opportunity/fields/Criada_via_Evento__c.field-meta.xml
<CustomField>
    <fullName>Criada_via_Evento__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Oportunidade criada via evento</description>
    <label>Criada via Evento</label>
    <type>Checkbox</type>
</CustomField>