force-app/main/default/objects/Opportunity/fields/Nome_do_Lead__c.field-meta.xml
<CustomField>
    <fullName>Nome_do_Lead__c</fullName>
    <description>Nome do Lead associado a esta oportunidade. Usado para rastrear oportunidades criadas para Leads que ainda não foram convertidos.</description>
    <label>Nome do Lead</label>
    <length>255</length>
    <type>Text</type>
</CustomField>