force-app/main/default/objects/Opportunity/fields/Probabilidade_da_Oportunidade__c.field-meta.xml
<CustomField>
    <fullName>Probabilidade_da_Oportunidade__c</fullName>
    <label>Probabilidade da Oportunidade</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>zero</fullName>
                <default>true</default>
                <label>0%</label>
            </value>
            <value>
                <fullName>treze</fullName>
                <label>13%</label>
            </value>
            <value>
                <fullName>trintaequatro</fullName>
                <label>34%</label>
            </value>
            <value>
                <fullName>cinquentaecinco</fullName>
                <label>55%</label>
            </value>
            <value>
                <fullName>oitentaenove</fullName>
                <label>89%</label>
            </value>
            <value>
                <fullName>cem</fullName>
                <label>100%</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>