force-app/main/default/objects/Opportunity/fields/Tipo_de_produto__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_produto__c</fullName>
    <label>Tipo de produto</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gestão de Patrimônio</fullName>
                <default>true</default>
                <label>Gestão de Patrimônio</label>
            </value>
            <value>
                <fullName>Liquidação Otimizada</fullName>
            </value>
            <value>
                <fullName>Consultoria Societária</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>